--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -26,7 +26,7 @@
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="/facturacion/crear/">
+      <a class="nav-link" href="{% url 'factura_crear' %}">
         <i class="cil-file"></i> Facturación
       </a>
     </li>
