--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/@coreui/coreui@5.4.3/dist/css/coreui.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+  <!-- Bootstrap 5 JS + Popper -->
   <style>
     /* Ajuste para que el contenido empiece después del navbar */
     .wrapper {
